# Orallama

./: .gitignore  README.md  chat.py  pyproject.toml  requirements.txt
